@@ -93,84 +93,52 @@ get_default_icons (GtkIconFactory *factory)
 
     gnome_icon_size_toolbar = gtk_icon_size_register ("gnome-toolbar", 20, 20);
 
-    add_sized (factory, stock_timer, GTK_ICON_SIZE_BUTTON, GNOME_STOCK_PIXMAP_TIMER);
+    add_sized (factory, stock_attach, GTK_ICON_SIZE_BUTTON, GNOME_STOCK_ATTACH);
+    add_sized (factory, stock_book_red, GTK_ICON_SIZE_BUTTON, GNOME_STOCK_BOOK_RED);
+    add_sized (factory, stock_book_green, GTK_ICON_SIZE_BUTTON, GNOME_STOCK_BOOK_GREEN);
+    add_sized (factory, stock_book_blue, GTK_ICON_SIZE_BUTTON, GNOME_STOCK_BOOK_BLUE);
+    add_sized (factory, stock_book_yellow, GTK_ICON_SIZE_BUTTON, GNOME_STOCK_BOOK_YELLOW);
     
-    add_sized (factory, stock_mail, GTK_ICON_SIZE_BUTTON, GNOME_STOCK_PIXMAP_MAIL);
-    add_sized (factory, stock_mail_receive, GTK_ICON_SIZE_BUTTON, GNOME_STOCK_PIXMAP_MAIL_RCV);
-    add_sized (factory, stock_mail_send, GTK_ICON_SIZE_BUTTON, GNOME_STOCK_PIXMAP_MAIL_SND);
-    add_sized (factory, stock_mail_reply, GTK_ICON_SIZE_BUTTON, GNOME_STOCK_PIXMAP_MAIL_RPL);
-    add_sized (factory, stock_mail_forward, GTK_ICON_SIZE_BUTTON, GNOME_STOCK_PIXMAP_MAIL_FWD);
+    add_sized (factory, stock_timer, GTK_ICON_SIZE_BUTTON, GNOME_STOCK_TIMER);
+    add_sized (factory, stock_timer_stopped, GTK_ICON_SIZE_BUTTON, GNOME_STOCK_TIMER_STOP);
+    add_sized (factory, stock_trash_full, GTK_ICON_SIZE_BUTTON, GNOME_STOCK_TRASH_FULL);
+
+    add_sized (factory, stock_mail, GTK_ICON_SIZE_BUTTON, GNOME_STOCK_MAIL);
+    add_sized (factory, stock_mail_receive, GTK_ICON_SIZE_BUTTON, GNOME_STOCK_MAIL_RCV);
+    add_sized (factory, stock_mail_send, GTK_ICON_SIZE_BUTTON, GNOME_STOCK_MAIL_SND);
+    add_sized (factory, stock_mail_reply, GTK_ICON_SIZE_BUTTON, GNOME_STOCK_MAIL_RPL);
+    add_sized (factory, stock_mail_forward, GTK_ICON_SIZE_BUTTON, GNOME_STOCK_MAIL_FWD);
     
-    add_sized (factory, stock_mic, GTK_ICON_SIZE_BUTTON, GNOME_STOCK_PIXMAP_MIC);
-    add_sized (factory, stock_volume, GTK_ICON_SIZE_BUTTON, GNOME_STOCK_PIXMAP_VOLUME);
-    add_sized (factory, stock_midi, GTK_ICON_SIZE_BUTTON, GNOME_STOCK_PIXMAP_MIDI);
-    add_sized (factory, stock_line_in, GTK_ICON_SIZE_BUTTON, GNOME_STOCK_PIXMAP_LINE_IN);
-    
-    add_sized (factory, stock_book_red, GTK_ICON_SIZE_BUTTON, GNOME_STOCK_PIXMAP_BOOK_RED);
-    add_sized (factory, stock_book_green, GTK_ICON_SIZE_BUTTON, GNOME_STOCK_PIXMAP_BOOK_GREEN);
-    add_sized (factory, stock_book_blue, GTK_ICON_SIZE_BUTTON, GNOME_STOCK_PIXMAP_BOOK_BLUE);
-    add_sized (factory, stock_book_yellow, GTK_ICON_SIZE_BUTTON, GNOME_STOCK_PIXMAP_BOOK_YELLOW);
-    
-    add_sized (factory, stock_attach, GTK_ICON_SIZE_BUTTON, GNOME_STOCK_PIXMAP_ATTACH);
-    
-    add_sized (factory, stock_not, GNOME_ICON_SIZE_TOOLBAR, GNOME_STOCK_PIXMAP_NOT);
-    add_sized (factory, stock_scores, GNOME_ICON_SIZE_TOOLBAR, GNOME_STOCK_PIXMAP_SCORES);
-    
-    add_sized (factory, stock_menu_about, GTK_ICON_SIZE_MENU, GNOME_STOCK_PIXMAP_ABOUT);
-    
-    add_sized (factory, stock_timer, GTK_ICON_SIZE_MENU, GNOME_STOCK_MENU_TIMER);
-    
-    add_sized (factory, stock_mail, GTK_ICON_SIZE_MENU, GNOME_STOCK_MENU_MAIL);
-    add_sized (factory, stock_mail_receive, GTK_ICON_SIZE_MENU, GNOME_STOCK_MENU_MAIL_RCV);
-    add_sized (factory, stock_mail_send, GTK_ICON_SIZE_MENU, GNOME_STOCK_MENU_MAIL_SND);
-    add_sized (factory, stock_mail_reply, GTK_ICON_SIZE_MENU, GNOME_STOCK_MENU_MAIL_RPL);
-    add_sized (factory, stock_mail_forward, GTK_ICON_SIZE_MENU, GNOME_STOCK_MENU_MAIL_FWD);
-    
-    add_sized (factory, stock_line_in, GTK_ICON_SIZE_MENU, GNOME_STOCK_MENU_LINE_IN);
-    add_sized (factory, stock_volume, GTK_ICON_SIZE_MENU, GNOME_STOCK_MENU_VOLUME);
-    add_sized (factory, stock_midi, GTK_ICON_SIZE_MENU, GNOME_STOCK_MENU_MIDI);
-    
-    add_sized (factory, stock_book_red, GTK_ICON_SIZE_MENU, GNOME_STOCK_MENU_BOOK_RED);
-    add_sized (factory, stock_book_green, GTK_ICON_SIZE_MENU, GNOME_STOCK_MENU_BOOK_GREEN);
-    add_sized (factory, stock_book_blue, GTK_ICON_SIZE_MENU, GNOME_STOCK_MENU_BOOK_BLUE);
-    add_sized (factory, stock_book_yellow, GTK_ICON_SIZE_MENU, GNOME_STOCK_MENU_BOOK_YELLOW);
-    
-    add_sized (factory, stock_menu_about, GTK_ICON_SIZE_MENU, GNOME_STOCK_MENU_ABOUT);
-    /* TODO: I shouldn't waste a pixmap for that */
-    add_sized (factory, stock_menu_blank, GTK_ICON_SIZE_MENU, GNOME_STOCK_MENU_BLANK); 
-    
-    add_sized (factory, stock_attach, GTK_ICON_SIZE_MENU, GNOME_STOCK_MENU_ATTACH);
-    
-    add_sized (factory, stock_table_borders, GNOME_ICON_SIZE_TOOLBAR, GNOME_STOCK_PIXMAP_TABLE_BORDERS);
-    add_sized (factory, stock_table_fill, GNOME_ICON_SIZE_TOOLBAR, GNOME_STOCK_PIXMAP_TABLE_FILL);
-    add_sized (factory, stock_text_bulleted_list, GNOME_ICON_SIZE_TOOLBAR, GNOME_STOCK_PIXMAP_TEXT_BULLETED_LIST);
-    add_sized (factory, stock_text_numbered_list, GNOME_ICON_SIZE_TOOLBAR, GNOME_STOCK_PIXMAP_TEXT_NUMBERED_LIST);
-    add_sized (factory, stock_text_indent, GNOME_ICON_SIZE_TOOLBAR, GNOME_STOCK_PIXMAP_TEXT_INDENT);
-    add_sized (factory, stock_text_unindent, GNOME_ICON_SIZE_TOOLBAR, GNOME_STOCK_PIXMAP_TEXT_UNINDENT);
-    
-    add_sized (factory, stock_menu_scores, GNOME_ICON_SIZE_TOOLBAR, GNOME_STOCK_MENU_SCORES);
+    add_sized (factory, stock_mic, GTK_ICON_SIZE_BUTTON, GNOME_STOCK_MIC);
+    add_sized (factory, stock_volume, GTK_ICON_SIZE_BUTTON, GNOME_STOCK_VOLUME);
+    add_sized (factory, stock_midi, GTK_ICON_SIZE_BUTTON, GNOME_STOCK_MIDI);
+    add_sized (factory, stock_line_in, GTK_ICON_SIZE_BUTTON, GNOME_STOCK_LINE_IN);
+
+    add_sized (factory, stock_table_borders, GTK_ICON_SIZE_BUTTON, GNOME_STOCK_TABLE_BORDERS);
+    add_sized (factory, stock_table_fill, GTK_ICON_SIZE_BUTTON, GNOME_STOCK_TABLE_FILL);
+
+    add_sized (factory, stock_text_bulleted_list, GTK_ICON_SIZE_BUTTON, GNOME_STOCK_TEXT_BULLETED_LIST);
+    add_sized (factory, stock_text_numbered_list, GTK_ICON_SIZE_BUTTON, GNOME_STOCK_TEXT_NUMBERED_LIST);
+    add_sized (factory, stock_text_indent, GTK_ICON_SIZE_BUTTON, GNOME_STOCK_TEXT_INDENT);
+    add_sized (factory, stock_text_unindent, GTK_ICON_SIZE_BUTTON, GNOME_STOCK_TEXT_UNINDENT);
+
+    add_sized (factory, stock_about, GTK_ICON_SIZE_MENU, GNOME_STOCK_ABOUT);
+    add_sized (factory, stock_blank, GTK_ICON_SIZE_MENU, GNOME_STOCK_BLANK); 
+
+    add_sized (factory, stock_not, GNOME_ICON_SIZE_TOOLBAR, GNOME_STOCK_NOT);
+    add_sized (factory, stock_scores, GNOME_ICON_SIZE_TOOLBAR, GNOME_STOCK_SCORES);
+
+    add_sized (factory, stock_multiple_file, GTK_ICON_SIZE_DND, GNOME_STOCK_MULTIPLE_FILE);
 }
 
 static GtkStockItem builtin_items [] =
 {
-    { GNOME_STOCK_PIXMAP_TABLE_BORDERS, N_("Table Borders"), 0, 0, GETTEXT_PACKAGE },
-    { GNOME_STOCK_PIXMAP_TABLE_FILL, N_("Table Fill"), 0, 0, GETTEXT_PACKAGE },
-    { GNOME_STOCK_PIXMAP_TEXT_BULLETED_LIST, N_("Bulleted List"), 0, 0, GETTEXT_PACKAGE },
-    { GNOME_STOCK_PIXMAP_TEXT_NUMBERED_LIST, N_("Numbered List"), 0, 0, GETTEXT_PACKAGE },
-    { GNOME_STOCK_PIXMAP_TEXT_INDENT, N_("Indent"), 0, 0, GETTEXT_PACKAGE },
-    { GNOME_STOCK_PIXMAP_TEXT_UNINDENT, N_("Un-Indent"), 0, 0, GETTEXT_PACKAGE },
-    { GNOME_STOCK_BUTTON_OK, N_("OK"), 0, 0, GETTEXT_PACKAGE },
-    { GNOME_STOCK_BUTTON_APPLY, N_("Apply"), 0, 0, GETTEXT_PACKAGE },
-    { GNOME_STOCK_BUTTON_CANCEL, N_("Cancel"), 0, 0, GETTEXT_PACKAGE },
-    { GNOME_STOCK_BUTTON_CLOSE, N_("Close"), 0, 0, GETTEXT_PACKAGE },
-    { GNOME_STOCK_BUTTON_YES, N_("Yes"), 0, 0, GETTEXT_PACKAGE },
-    { GNOME_STOCK_BUTTON_NO, N_("No"), 0, 0, GETTEXT_PACKAGE },
-    { GNOME_STOCK_BUTTON_HELP, N_("Help"), 0, 0, GETTEXT_PACKAGE },
-    { GNOME_STOCK_BUTTON_NEXT, N_("Next"), 0, 0, GETTEXT_PACKAGE },
-    { GNOME_STOCK_BUTTON_PREV, N_("Prev"), 0, 0, GETTEXT_PACKAGE },
-    { GNOME_STOCK_BUTTON_UP, N_("Up"), 0, 0, GETTEXT_PACKAGE },
-    { GNOME_STOCK_BUTTON_DOWN, N_("Down"), 0, 0, GETTEXT_PACKAGE },
-    { GNOME_STOCK_BUTTON_FONT, N_("Font"), 0, 0, GETTEXT_PACKAGE },
+    { GNOME_STOCK_TABLE_BORDERS, N_("Table Borders"), 0, 0, GETTEXT_PACKAGE },
+    { GNOME_STOCK_TABLE_FILL, N_("Table Fill"), 0, 0, GETTEXT_PACKAGE },
+    { GNOME_STOCK_TEXT_BULLETED_LIST, N_("Bulleted List"), 0, 0, GETTEXT_PACKAGE },
+    { GNOME_STOCK_TEXT_NUMBERED_LIST, N_("Numbered List"), 0, 0, GETTEXT_PACKAGE },
+    { GNOME_STOCK_TEXT_INDENT, N_("Indent"), 0, 0, GETTEXT_PACKAGE },
+    { GNOME_STOCK_TEXT_UNINDENT, N_("Un-Indent"), 0, 0, GETTEXT_PACKAGE },
 };
 
 void
